--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -10,7 +11,8 @@ header {
   align-items: flex-start;
   position: fixed;
   height: 100vh;
-  width: auto;
+  width: 70px;
+  /* Tamaño inicial cerrado */
   z-index: 10;
   border-right: 2px solid white;
   padding: 20px 0;
@@ -20,10 +22,7 @@ header {
 
 header.sidebar-open {
   width: 220px;
-}
-
-header.sidebar-closed {
-  width: 70px;
+  /* Ancho cuando el sidebar está abierto */
 }
 
 .icon-container {
@@ -101,7 +100,7 @@ nav a.active span {
 }
 
 .opciones-user .user-icons a:hover i {
-  color: #75e0ee;;
+  color: #75e0ee;
 }
 
 .user-info {
@@ -115,12 +114,6 @@ nav a.active span {
   margin-bottom: 20px;
 }
 
-.avatar {
-  height: 90px;
-  width: 90px;
-  margin-bottom: 0;
-  margin-right: 40px;
-}
 
 .tituloLogo {
   font-size: 28px;
@@ -130,7 +123,8 @@ nav a.active span {
   margin-left: 10px;
 }
 
-.divider, .dividerUser {
+.divider,
+.dividerUser {
   border: none;
   border-top: 1px solid rgba(255, 255, 255, 0.3);
   margin: 8px 0;
@@ -138,7 +132,8 @@ nav a.active span {
   transition: width 0.3s ease;
 }
 
-.sidebar-open .divider, .sidebar-open .dividerUser {
+.sidebar-open .divider,
+.sidebar-open .dividerUser {
   width: 80%;
 }
 
@@ -146,4 +141,22 @@ nav a.active span {
   color: white;
   font-size: 30px;
   margin-left: 10px;
+}
+
+.avatar {
+  height: 90px;
+  width: 90px;
+  margin-bottom: 0;
+  margin-right: 40px;
+}
+
+
+.avatar-container {
+  width: 90px;
+  height: 90px;
+  margin-left: 45px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid #007bff;
+
 }
