--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header *ngIf="isMovieDetailsPage()" [class.sidebar-open]="isSidebarOpen" [class.sidebar-closed]="!isSidebarOpen">
+<header *ngIf="isHeaderVisible()" [class.sidebar-open]="isSidebarOpen">
   <!-- Contenedor del icono y logo -->
   <div class="icon-container" (click)="toggleSidebar()">
     <i class="fa-solid fa-ticket" id="icono"></i>
@@ -13,24 +13,29 @@
     <hr class="divider">
 
     <div class="nav-item">
-      <a [routerLink]="['/movieList']" routerLinkActive="active"><i class="fa-solid fa-film"></i> <span *ngIf="isSidebarOpen">Cartelera</span></a>
+      <a [routerLink]="['/movieList']" routerLinkActive="active"><i class="fa-solid fa-film"></i> <span
+          *ngIf="isSidebarOpen">Cartelera</span></a>
     </div>
     <hr class="divider">
 
     <div class="nav-item">
-      <a routerLink="/tienda" routerLinkActive="active"><i class="fas fa-shopping-cart"></i> <span *ngIf="isSidebarOpen">Tienda</span></a>
+      <a routerLink="/tienda" routerLinkActive="active"><i class="fas fa-shopping-cart"></i> <span
+          *ngIf="isSidebarOpen">Tienda</span></a>
     </div>
     <hr class="divider">
 
     <div class="nav-item">
-      <a routerLink="/contacto" routerLinkActive="active"><i class="fas fa-envelope"></i> <span *ngIf="isSidebarOpen">Contacto</span></a>
+      <a routerLink="/contacto" routerLinkActive="active"><i class="fas fa-envelope"></i> <span
+          *ngIf="isSidebarOpen">Contacto</span></a>
     </div>
     <hr class="divider">
 
     <!-- Enlace de login/logout -->
     <div class="nav-item">
-      <a *ngIf="!userName" (click)="openModal()" routerLink="/movieList"><i class="fas fa-sign-in-alt"></i> <span *ngIf="isSidebarOpen">Login</span></a>
-      <a *ngIf="userName" (click)="logout()" routerLink="/movieList"><i class="fas fa-sign-out-alt"></i> <span *ngIf="isSidebarOpen">Salir</span></a>
+      <a *ngIf="!userName" (click)="openModal()" routerLink="/movieList"><i class="fas fa-sign-in-alt"></i> <span
+          *ngIf="isSidebarOpen">Login</span></a>
+      <a *ngIf="userName" (click)="logout()" routerLink="/movieList"><i class="fas fa-sign-out-alt"></i> <span
+          *ngIf="isSidebarOpen">Salir</span></a>
     </div>
     <hr class="divider">
 
@@ -49,14 +54,16 @@
         </a>
         <hr *ngIf="isSidebarOpen" class="dividerUser">
 
-        <a routerLink="/perfil" routerLinkActive="active">
+        <a routerLink="/profile" routerLinkActive="active">
           <i class="fa-solid fa-head-side-virus"></i>
           <span *ngIf="isSidebarOpen">Perfil</span>
         </a>
       </div>
 
       <div class="user-info" *ngIf="isSidebarOpen">
-        <img class="avatar" src="{{ avatar }}" alt="Avatar del usuario">
+        <div class="avatar-container">
+          <img [src]="avatar" alt="Avatar de usuario" class="avatar" />
+        </div>
         <p class="user-name">Bienvenido, {{ userName }}</p>
       </div>
     </div>
