--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -1,24 +1,27 @@
-
 .slider-container {
   position: relative;
-  width: 450px; /* Ancho del slider */
-  height: 450px; /* Altura del slider */
+  width: 450px;
+  /* Ancho del slider */
+  height: 450px;
+  /* Altura del slider */
   overflow: hidden;
   text-align: center;
-  border-radius: 10px; /* Bordes redondeados */
+  border-radius: 10px;
+  /* Bordes redondeados */
 
 
 }
 
 .slide img {
-  width: 60%;
-  height: 40%;
-  object-fit: fill; /* La imagen cubre el recuadro y se ajusta */
-  border-radius: 10px; /* Coincide con los bordes del contenedor */
+  width: 65%;
+  height: 65%;
+  object-fit: fill;
+  /* La imagen cubre el recuadro y se ajusta */
+  border-radius: 10px;
+  /* Coincide con los bordes del contenedor */
   border: 3px solid black;
 
 }
-
 
 
 .movie-title {
