--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -3,7 +3,8 @@
   <button class="nav-button prev" (click)="previousSlide()">&#10094;</button>
 
   <div class="slide">
-    <img [src]="'https://image.tmdb.org/t/p/w500' + movies[currentIndex].poster_path" [alt]="movies[currentIndex].title">
+    <img [src]="'https://image.tmdb.org/t/p/w500' + movies[currentIndex].poster_path"
+      [alt]="movies[currentIndex].title">
   </div>
 
   <button class="nav-button next" (click)="nextSlide()">&#10095;</button>
