--- a/src/app/actor-movies-detail/actor-movies-detail.component.html
+++ b/src/app/actor-movies-detail/actor-movies-detail.component.html
@@ -1,12 +1,28 @@
-<div *ngIf="actorMovies.length > 0" class="actor-movies-container">
-  <div *ngFor="let movie of actorMovies" class="movie-card" (click)="goToMovieDetails(movie.id)">
-    <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" [alt]="movie.title" class="poster-image" (error)="onImageError($event)">
+<div class="actor-movies-container">
 
-    <!-- Mueve el contenedor del título fuera de la imagen -->
-    <div class="title-container">
-      <h3 class="movie-title">{{ movie.title }}</h3>
+  <!-- Caja para la foto del actor -->
+  <div class="actor-photo-card">
+    <img [src]="'https://image.tmdb.org/t/p/w500' + actorProfilePath"
+         [alt]="actorName"
+         class="actor-photo"
+         (error)="onImageError($event)">
+    <div class="title-container-actor">
+      <h3 class="actor-name">{{ actorName }}</h3>
     </div>
   </div>
+
+  <!-- Cajas para las películas -->
+  <div *ngFor="let movie of actorMovies" class="movie-card" (click)="goToMovieDetails(movie.id)">
+    <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path"
+         [alt]="movie.title"
+         class="poster-image"
+         (error)="onImageError($event)">
+    <div class="title-container">
+      <h3 class="movie-title">{{ movie.title }}</h3>
+      <h4>{{ movie.release_date | date:'yyyy' }}</h4>
+    </div>
+  </div>
+
 </div>
 
 <div *ngIf="actorMovies.length === 0" class="no-movies-message">
