--- a/src/app/top250-movies/top250-movies.component.css
+++ b/src/app/top250-movies/top250-movies.component.css
@@ -10,6 +10,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
   column-gap: 6px;
+  row-gap: 10px;
 }
 
 .movie-card {
