--- a/src/app/login-modal/login-modal.component.css
+++ b/src/app/login-modal/login-modal.component.css
@@ -145,3 +145,40 @@
     justify-content: space-around;  /* En pantallas más pequeñas, distribuye los avatares */
   }
 }
+
+/* Estilo básico para el Toast */
+/* Estilo para el contenedor principal del mensaje */
+p-toast .ui-toast-message {
+  background-color: #f10000; /* Fondo claro */
+  border-left: 5px solid #8c00ff; /* Línea indicadora */
+  padding: 10px;
+  border-radius: 5px; /* Bordes redondeados */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+  font-family: 'Arial', sans-serif;
+}
+
+/* Estilo para el texto del mensaje */
+
+/* Posicionamiento del Toast */
+.custom-toast {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-family: 'Arial', sans-serif;
+}
+
+/* Éxito */
+.custom-toast.success {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+
+/* Error */
+.custom-toast.error {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+}
+
