--- a/src/app/buy-ticket/buy-ticket.component.html
+++ b/src/app/buy-ticket/buy-ticket.component.html
@@ -50,6 +50,6 @@
     </div>
 
     <button type="submit" class="confirm-btn">Confirmar Compra</button>
-    <button type="submit" class="volver-btn">Volver</button>
+    <button type="submit" class="back-btn" (click)="volver(movie.id)">Volver</button>
   </form>
 </div>
