--- a/src/app/tienda/tienda.component.html
+++ b/src/app/tienda/tienda.component.html
@@ -4,7 +4,7 @@
     <i class="fas fa-shopping-cart"></i> <span class="texto-cesta">Cesta</span> ({{ productosEnCesta.length }})
   </div>
 
-  <!-- Sección de la cesta (desplegable) -->
+  <!-- cesta  desplegada-->
   <div class="cesta" *ngIf="isCestaVisible">
     <h2 class="cestaTexto">Cesta</h2>
 
@@ -16,6 +16,7 @@
 
     </div>
     <h3>Total: {{ getTotalCesta()}} €</h3>
+    <button (click)="ComprarProdCesta(userId)">Comprar</button>
     <div *ngIf="productosEnCesta.length === 0">No hay productos en la cesta.</div>
   </div>
 
