--- a/src/app/login-modal/login-modal.component.html
+++ b/src/app/login-modal/login-modal.component.html
@@ -22,15 +22,15 @@
       <form [formGroup]="registroForm" (ngSubmit)="onRegister()">
         <div>
           <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" formControlName="nombre" required>
+          <input type="text" id="nombre" formControlName="nombre" required placeholder="Introduce tu nombre...">
         </div>
         <div>
           <label for="correo">Correo Electrónico:</label>
-          <input type="email" id="correo" formControlName="correo" required>
+          <input type="email" id="correo" formControlName="correo" required placeholder="Introduce tu correo electrónico...">
         </div>
         <div>
           <label for="contrasena">Contraseña:</label>
-          <input type="password" id="contrasena" formControlName="contrasena" required>
+          <input type="password" id="contrasena" formControlName="contrasena" required placeholder="Introduce tu contraseña...">
         </div>
         <div>
           <label for="saldo">Saldo Inicial:</label>
