--- a/src/app/buy-ticket/buy-ticket.component.css
+++ b/src/app/buy-ticket/buy-ticket.component.css
@@ -8,6 +8,7 @@
   background-color: #f9f9f9;
   margin-top: 10px;
   border-radius: 8px;
+  margin-bottom: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
