--- a/src/app/buy-ticket/buy-ticket.component.html
+++ b/src/app/buy-ticket/buy-ticket.component.html
@@ -49,7 +49,8 @@
       <p><strong>Total:</strong> {{ calculateTotal() }} €</p>
     </div>
 
-    <button type="submit" class="confirm-btn">Confirmar Compra</button>
-    <button type="submit" class="back-btn" (click)="volver(movie.id)">Volver</button>
+    <button
+    type="submit"class="confirm-btn"(click)="ConfirmarCompra()" [disabled]="!selectedTime"> Confirmar Compra</button>
+    <!-- <button type="submit" class="back-btn" (click)="volver(movie.id)">Volver</button> -->
   </form>
 </div>
